
- add putsrpm command in man page (#4055)
- fix putsrpm --help message (#4053)
- update URLs for new wiki

* 1.10.2
- fix svn info with subversion 1.7.1 (#3346)
- create-srpm: add new package in youri database
- add config option to specify maintdb hostname
- do not explode if the sha1.lst file is no longer here
- add --nosignature so signed rpm can be imported
- fix URL for anonymous svn in default config file

* 1.10.1
- check sha1sum of existing binary files when updating
- remove file when there was an error during download from binrepo

* 1.10.0
- change binrepo :
  http://mageia.org/pipermail/mageia-sysadm/2011-July/003717.html
- add command maintdb in the help
- Fix the example in the usage message of putsrpm.py

* 1.9.11
- add maintdb command
- Fix examples in the usage message of co.py

* 1.9.10
- ignore incorrect symlinks in SOURCES directory (#463)
- fix svn status function and only add files with status "?"
  in mgarepo sync (#349)
- do not leave empty file when download failed (#374)
- remove logging error
- remove link to mandriva build system from help
- add 'up' to the --help message
- fix example in usage message

* 1.9.9
- in sync, only try to remove files that are on svn or symlinks
- check hash for binary files
- add binrepo revision option in getsrpm
- use --nodeps when unpacking source rpm (for rpm5)
- add support for rpm 4.8 (spec.sources is now a list instead of a method)

* 1.9.8
- fix mgarepo sync

* 1.9.7
- fix mgarepo ci
- properly set each rpm macros at import
- update help
- set property binrepo-rev instead of mdv:binrepo-rev
- mgarepo del is now working
- create-srpm path changed to /usr/local/bin/submit_package in default config file

* 1.9.6
- don't allow importing packages already on svn
- fix problems introduced in previous version with added '@' in path

* 1.9.5
- rename repsys files to mgarepo, RepSys directory to MgaRepo, and
  update docs and examples for Mageia
- fix svn syntax problems in case of paths containing '@'
