@@ -1,4 +1,6 @@
 
+- allow keeping the old rpm log in the package directory if the oldurl
+  config value is set to '.' or starts with './'
 - add putsrpm command in man page (#4055)
 - fix putsrpm --help message (#4053)
 - update URLs for new wiki
